# dm-SpaceEcho

./: .gitignore  README.md
.github/workflows/: build.yml  dm-spaceecho.mk
lv2/: Cargo.toml
lv2/dm-SpaceEcho.lv2/: dm-SpaceEcho.ttl  manifest.ttl  modgui.ttl
lv2/dm-SpaceEcho.lv2/modgui/: icon-dm-spaceecho.html  javascript.js  stylesheet-dm-spaceecho.css
lv2/src/: lib.rs
nih-plug/: Cargo.toml
nih-plug/src/: editor.rs  lib.rs  space_echo_parameters.rs
profiling/: Cargo.toml
profiling/benches/: reverb_bench.rs  space_echo_bench.rs
profiling/src/: main.rs  utils.rs
scripts/: build-lv2-for-mod-desktop-mac.sh  build-lv2-for-mod-desktop.sh  build-vst-for-mac-m1.sh  build-vst-for-mac.sh  build-vst3-for-mac.sh
space_echo/: Cargo.toml
space_echo/src/: average.rs  base_plug_smooth.rs  dc_block.rs  dc_block_stereo.rs  duck.rs  float_ext.rs  lib.rs  limiter.rs  log_smooth.rs  mix.rs  moving_min.rs  nih_smooth.rs  one_pole_filter.rs  params.rs  phasor.rs  ramp_slide.rs  random_oscillator.rs  reverb.rs  saturation.rs  slide.rs  smooth_parameters.rs  space_echo.rs  tsk_filter_stereo.rs  variable_delay_line.rs  variable_delay_read.rs  wow_and_flutter.rs
vst/: Cargo.toml
vst/src/: bin.rs  editor.rs  lib.rs  space_echo_parameters.rs
vst/src/editor/: level_controls.rs  reverb_filter_controls.rs  style.css  time_controls.rs  ui.rs  ui_data.rs
vst/src/editor/components/: param_checkbox.rs  param_knob.rs  param_radio_button.rs
vst/src/editor/ui/: level_controls.rs  param_checkbox.rs  param_knob.rs  param_radio_button.rs  reverb_filter_controls.rs  style.css  time_controls.rs  ui_data.rs
vst/src/editor/ui/components/: param_checkbox.rs  param_knob.rs  param_radio_button.rs
vst/src/space_echo_parameters/: formatters.rs  params.rs
vst/src/space_echo_parameters/params/: int_param.rs
vst/src/space_echo_parameters/params/float_param/: float_range.rs
vst3/: Cargo.toml
vst3/src/: editor.rs  lib.rs  space_echo_parameters.rs
vst3/src/editor/: level_controls.rs  reverb_filter_controls.rs  ui.rs
vst3/src/editor/ui/: level_controls.rs  reverb_filter_controls.rs  time_controls.rs  ui_data.rs
vst3/src/editor/ui/components/: param_checkbox.rs  param_knob.rs  param_radio_button.rs
vst3/src/space_echo_parameters/: custom_formatters.rs
(+29 files in other folders)
