[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
space_echo = { path = "../space_echo" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
flamegraph = "0.3"
fastrand = "2.1.0"

[[bench]]
name = "reverb_bench"
harness = false

[[bench]]
name = "space_echo_bench"
harness = false
