[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[profile.release]
debug = true

[dependencies]
fastrand = "2.3.0"
space_echo = { path = "../space_echo" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
flamegraph = "0.3"

[[bench]]
name = "reverb_bench"
harness = false

[[bench]]
name = "space_echo_bench"
harness = false
