[package]
name = "dm_space_echo"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.3.0"
vizia = {git = "https://github.com/vizia/vizia", branch = "main", features = ["baseview"], default-features = false}
space_echo = { path = "../space_echo" }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "dm_space_echo_gui"
path = "src/bin.rs"
