[package]
name = "dm_space_echo"
version = "0.1.0"
authors = ["Dave Mollen <davemollen@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug", features = ["assert_process_allocs"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
space_echo = { path = "../space_echo" }

[workspace]
members = ["xtask"]